fix gallary h-scrollbar

--- a/src/components/gallery/index.scss
+++ b/src/components/gallery/index.scss
@@ -1,14 +1,13 @@
 .Gallery {
   display: flex;
-  flex-direction: row;
-  width: 100%;
+  flex-flow: row wrap;
   ul {
+    flex-grow: 0;
+    flex-shrink: 0;
     list-style-type: none;
-    padding-right: 8px;
     > li {
       display: inline-block;
       width: 100%;
-      padding-bottom: 8px;
       font-size: 0;
       img {
         width: 100%;
