--- a/src/modules/rog/detail/index.scss
+++ b/src/modules/rog/detail/index.scss
@@ -7,6 +7,7 @@
 
   &Right {
     padding-top: 110px;
+    padding: 110px 15px 0 16px;
     background-color: #efefef;
     img {
       width: 100%;
